--- a/nabard/templates/team_register.html
+++ b/nabard/templates/team_register.html
@@ -30,6 +30,7 @@
 </head>
 <body>
 <div class="container">
+	<a href="{% url 'nabard:index' %}" class="home">صفحه اصلی</a>
 	<div class="row">
 		<h2>فرم ثبت نام</h2>
 		<span class="underline"></span>
