--- a/nabard/templates/index.html
+++ b/nabard/templates/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+﻿{% load static %}
 <!DOCTYPE html>
 <html lang="fa">
 
@@ -12,7 +12,7 @@
 	<script src="https://kit.fontawesome.com/05c23298b2.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<title>مسابقه نبرد اپلیکیشن ها</title>
+	<title>دومین مسابقه ملی نبرد اپلیکیشن‌ها</title>
 </head>
 
 OB<body>
@@ -21,11 +21,11 @@ OB<body>
 	<a href="javascript:void(0);" class="icon" onclick="toggle_nav()">
 		<i class="fa fa-bars" style="color: bisque"></i>
 	</a>
-	<a href="#header" id="nav-brand" class="active">مسابقه نبرد اپلیکیشن ها</a>
+	<a href="#header" id="nav-brand" class="active">مسابقه ملی نبرد اپلیکیشن‌ها</a>
 	<a href="#section-info">معرفی</a>
 	<a href="#staff">کمیته علمی و اجرایی</a>
 	<a href="#summary">توضیحات مسابقه</a>
-	<a href="#timetable">زمان بندی و ثبت نام</a>
+	<a href="#timetable">زمان‌بندی و ثبت نام</a>
 	<a href="#sponsors">حامیان</a>
 	<a href="#contact">ارتباط با ما</a>
 </nav>
@@ -35,8 +35,8 @@ OB<body>
 <header id="header">
 	<div class="container">
 		<div class="row">
-			<img src="{% static 'img/nabardlogo.png' %}" alt="مسابقه نبرد اپلیکیشن ها">
-			<h1 class="heading-1">دومین دوره از مسابقات نبرد اپلیکیشن ها</h1>
+			<img src="{% static 'img/nabardlogo.png' %}" alt="مسابقه نبرد اپلیکیشن‌ها">
+			<h1 class="heading-1">دومین دوره از مسابقات ملی نبرد اپلیکیشن‌ها</h1>
 			<a href="#section-info" id="heading-link"><i class="fas fa-arrow-circle-down"></i></a>
 		</div>
 	</div>
@@ -50,30 +50,31 @@ OB<body>
 		<div class="row">
 			<!-- <span class="underline"></span> -->
 			<p id="info-p" dir="rtl">
-				دانشکده مهندسی کامپیوتر دانشگاه اصفهان، میزبان برگزاری دومین دوره از مسابقات ملی نبرد اپلیکیشن
-				ها در 24 مهرماه 98
+				دانشکده مهندسی کامپیوتر دانشگاه اصفهان، میزبان برگزاری دومین دوره از مسابقات ملی نبرد اپلیکیشن‌ها
+				 در 24 مهرماه 98
 				می‌باشد.
+                <br />
 				<a href="http://ui.ac.ir/Dorsapax/userfiles/Sub108/comp/app-ui.pdf">اولین دوره از مسابقات نبرد
-					اپلیکیشن ها</a> در آبان 1393 در دانشگاه اصفهان برگزار
+					اپلیکیشن‌ها</a> در آبان 1393 در دانشگاه اصفهان برگزار
 				گردید و مورد
 				استقبال زیاد شرکت کنندگان قرار
-				گرفت. در این دوره از مسابقات، توانایی شرکت کنندگان در کارآفرینی، حل مشکلات و استفاده از فرصت ها
-				به چالش کشیده می شود. در
-				این مسابقه لازم است شرکت کنندگان ابتدا ایده پردازی کرده و سپس ایده های خود را در قالب اپلیکیشن
+				گرفت. در این دوره از مسابقات، توانایی شرکت کنندگان در کارآفرینی، حل مشکلات و استفاده از فرصت‌ها
+				به چالش کشیده می‌شود. در
+				این مسابقه لازم است شرکت کنندگان ابتدا ایده پردازی کرده و سپس ایده‌های خود را در قالب اپلیکیشن
 				های موبایل یا وب پیاده
 				سازی کنند.
-				اپلیکیشن های ارسال شده توسط کمیته علمی ارزیابی خواهد شد و تیم های برتر برای ارائه حضوری در روز
+				اپلیکیشن‌های ارسال شده توسط کمیته علمی ارزیابی خواهد شد و تیم‌های برتر برای ارائه حضوری در روز
 				مسابقه دعوت خواهند شد.
-				سپس در روز مسابقه سه تیم برگزیده انتخاب شده و مورد تقدیر قرار خواهند گرفت. تیم های برگزیده از
+				سپس در روز مسابقه سه تیم برگزیده انتخاب شده و مورد تقدیر قرار خواهند گرفت. تیم‌های برگزیده از
 				جوایز ارزنده و همچنین
 				حمایت شتاب دهنده هاب برخوردار خواهند شد .
-				تیم ارزیابی شامل اعضای کمیته علمی مسابقه و نمایندگان شرکت شتاب دهنده هاب می باشد. در این مسابقه
+				تیم ارزیابی شامل اعضای کمیته علمی مسابقه و نمایندگان شرکت شتاب دهنده هاب می‌باشد. در این مسابقه
 				به ایده کسب و کار، پیاده
-				سازی و تکنولوژی های استفاده شده امتیاز داده می شود.
+				سازی و تکنولوژی‌های استفاده شده امتیاز داده می‌شود.
 			</p>
 			<!-- <a href="#" id="info-link">GET STARTED!</a> -->
 			<div class="info-image">
-				<img src="{% static 'img/poster.jpg' %}" alt="نبرد اپلیکیشن ها">
+				<img src="{% static 'img/poster.jpg' %}" alt="نبرد اپلیکیشن‌ها" height="445">
 			</div>
 		</div>
 	</div>
@@ -251,14 +252,14 @@ OB<body>
 		<div class="row">
 			<h2>توضیحات مسابقه</h2>
 			<span class="underline"></span>
-			<p dir="rtl">شرکت کنندگان در این مسابقه ابتدا باید ایده ای برای کسب و کار و درآمدزایی ارائه دهند و
+			<p dir="rtl">شرکت کنندگان در این مسابقه ابتدا باید ایده‌ای برای کسب و کار و درآمدزایی ارائه دهند و
 				سپس آن رادر
 				قالب یک اپلیکیشن موبایل
-				یا وب پیاده سازی کنند.
-				تعداد اعضا هر تیم بین 1 تا 5 نفر می باشد. هر تیم می تواند حداکثر 3 اپلیکیشن ارسال کند. همچنین
+				یا وب پیاده‌سازی کنند.
+				تعداد اعضا هر تیم بین 1 تا 5 نفر می‌باشد. هر تیم می‌تواند حداکثر 3 اپلیکیشن ارسال کند. همچنین
 				حضور شرکت کنندگان در بیش
 				از یک تیم بلامانع است.
-				تیم های شرکت کننده باید موارد زیر را از طریق لینک ثبت نام ارسال کنند.
+				تیم‌های شرکت کننده باید موارد زیر را از طریق لینک ثبت نام ارسال کنند.
 			</p>
 			<div class="table" style="overflow-x: auto;">
 				<table>
@@ -267,7 +268,7 @@ OB<body>
 						<th>مورد</th>
 					</tr>
 					<tr>
-						<td>نمونه اولیه از اپلیکیشن کافی است و لزومی به ارائه اپلیکیشن نهایی نیست</td>
+						<td>نمونه اولیه از اپلیکیشن کافی است و لزومی‌به ارائه اپلیکیشن نهایی نیست</td>
 						<td>اپلیکیشن طراحی شده توسط تیم</td>
 					</tr>
 					<tr>
@@ -285,10 +286,10 @@ OB<body>
 			</div>
 			<p class="table-content" dir="rtl">*
 				درمورد طرح ارائه شده
-				مدتی از ارائه این اپلیکیشن گذشته، در حال حاضر تجاری شده و وارد بازار شده است. ولی طرح های
+				مدتی از ارائه این اپلیکیشن گذشته، در حال حاضر تجاری شده و وارد بازار شده است. ولی طرح‌های
 				دانشجویان نیاز نیست به این
 				مرحله رسیده باشد.
-				می توانید کلا رنگ و تمپلیت را هم به سلیقه خودتان عوض کنید
+				می‌توانید کلا رنگ و تمپلیت را هم به سلیقه خودتان عوض کنید
 				*
 			</p>
 		</div>
@@ -327,7 +328,7 @@ OB<body>
 		</div>
 		<span class="underline" style="width: 70%; margin-left: 15%; margin-top: 50px;"></span>
 		<div class="workshops">
-			<h2>کارگاه های مرتبط</h2>
+			<h2>کارگاه‌های مرتبط</h2>
 			<a href="http://shekoufehrahimi.com/UINabard/site/images/nabard1.jpg">دومین دوره کارگاه خلق
 				اپلیکیشن و درآمدزایی</a>
 			<a href="http://shekoufehrahimi.com/UINabard/site/images/nabard2.jpg">اولین دوره کارگاه خلق اپلیکیشن
@@ -366,7 +367,7 @@ OB<body>
 	<div class="container">
 		<div class="row">
 			<div class="title">
-				<h2>راه های ارتباط با ما</h2>
+				<h2>راه‌های ارتباط با ما</h2>
 				<span class="underline"></span>
 			</div>
 			<div class="contact-items">
