--- a/nabard/templates/index.html
+++ b/nabard/templates/index.html
@@ -26,7 +26,7 @@ OB
 	<a href="#section-info">معرفی</a>
 	<a href="#staff">کمیته علمی و اجرایی</a>
 	<a href="#summary">توضیحات مسابقه</a>
-	<a href="#prizes">جوایز</a>
+	<a href="#awards">جوایز</a>
 	<a href="#timetable">زمان‌بندی و ثبت نام</a>
 	<a href="#sponsors">حامیان</a>
 	<a href="#contact">ارتباط با ما</a>
@@ -53,9 +53,9 @@ OB
 			<!-- <span class="underline"></span> -->
 			<p id="info-p" dir="rtl">
 				دانشکده مهندسی کامپیوتر دانشگاه اصفهان، میزبان برگزاری دومین دوره از مسابقات ملی نبرد اپلیکیشن‌ها
-				 در 24 مهرماه 98
+				در 24 مهرماه 98
 				می‌باشد.
-                <br />
+				<br/>
 				<a href="http://ui.ac.ir/Dorsapax/userfiles/Sub108/comp/app-ui.pdf">اولین دوره از مسابقات نبرد
 					اپلیکیشن‌ها</a> در آبان 1393 در دانشگاه اصفهان برگزار
 				گردید و مورد
@@ -293,19 +293,29 @@ OB
 				مرحله رسیده باشد.
 				می‌توانید کلا رنگ و تمپلیت را هم به سلیقه خودتان عوض کنید
 				*
-			</p>
-			<section id="prizes">
-				<div style="padding: 5px">
-					<div class="rewards">
-						<h2>جوایز مسابقه</h2>
-						<span class="underline"></span>
-						<p>نفر اول : ۳ میلیون تومان</p>
-						<p>نفر دوم : ۲ میلیون تومان</p>
-						<p>نفر سوم : ۱ میلیون تومان</p>
-					</div>
-				</div>
-			</section>
 		</div>
+	</div>
+</section>
+
+<!-- Awards -->
+<section id="awards">
+	<div class="container">
+		<div class="row">
+			<h2>جوایز مسابقه</h2>
+			<span class="underline"></span>
+			<div class="award-image">
+				<img src="{% static 'img/medal.png' %}" alt="">
+			</div>
+			<div class="rewards">
+				<p>نفر اول : ۳ میلیون تومان</p>
+				<p>نفر دوم : ۲ میلیون تومان</p>
+				<p>نفر سوم : ۱ میلیون تومان</p>
+			</div>
+			<div class="awards-header">
+				<h2>: جوایز مسابقه</h2>
+			</div>
+		</div>
+	</div>
 	</div>
 </section>
 
